<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/home_as_up"
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="11dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/bling_rewards_back" />

            <TextView
                style="@style/font_700"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_title"
                android:textSize="19dp" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_divider_height"
        android:layout_marginHorizontal="24dp"
        android:background="@color/dividerColor" />

    <TextView
        style="@style/font_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="31dp"
        android:layout_marginTop="27dp"
        android:text="ID"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/user_id_view"
        style="@style/font_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="31dp"
        android:layout_marginTop="4dp"
        android:textSize="24dp" />

    <TextView
        style="@style/font_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="31dp"
        android:layout_marginTop="33dp"
        android:text="User name"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/user_name_view"
        style="@style/font_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="31dp"
        android:layout_marginTop="3dp"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/change_user_name_view"
        style="@style/font_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="31dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/underline_view"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:paddingBottom="2dp"
        android:text="@string/change"
        android:textColor="@color/colorPrimary"
        android:textSize="16dp" />

    <TextView
        style="@style/font_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="31dp"
        android:layout_marginTop="37dp"
        android:text="Password"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/change_password_view"
        style="@style/font_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="31dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/underline_view"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:paddingBottom="2dp"
        android:text="@string/change"
        android:textColor="@color/colorPrimary"
        android:textSize="16dp" />

    <LinearLayout
        android:id="@+id/account_color_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="31dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/font_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:text="Color"
            android:textSize="12dp" />

        <View
            android:id="@+id/color_view"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/setting_color_view"
            android:backgroundTint="@color/white" />

        <TextView
            android:id="@+id/change_color_view"
            style="@style/font_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/underline_view"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:paddingBottom="2dp"
            android:text="@string/change"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/section_height"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="26dp"
        android:background="@color/sectionColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="31dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/remove_account_link_view"
            style="@style/font_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/underline_view"
            android:clickable="true"
            android:paddingBottom="2dp"
            android:text="@string/remove_account"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/sign_out_btn"
            style="@style/setup_btn"
            android:text="@string/sign_out" />

    </LinearLayout>
</LinearLayout>